--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Welcome to KRY</title>
 </head>
 <body>
-KRY status poller
-<ul id="service-list">
-</ul>
-<input type="text" id="url-name">
-<button id="post-service">Save</button>
 
+<div class="jumbotron">
+    <div class="container">
+        <h1 class="display-4">KRY status poller</h1>
+        <p class="lead">Utility to add , edit and delete different services and polls its status.</p>
+    </div>
+</div>
+<hr class="my-4">
+<div class="container">
+    <form>
+        <div class="form-group">
+            <label for="formGroupExampleInput">Service Name</label>
+            <input type="text"  id="url-name" class="form-control" id="formGroupExampleInput" placeholder="KRY">
+        </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput2">Service URL</label>
+            <input type="text" id="url-value" class="form-control" id="formGroupExampleInput2" placeholder="https://kry.se">
+        </div>
+        <button type="submit" id="post-service" class="btn btn-primary">Save</button>
+    </form>
+</div>
+<hr class="my-4">
+<div class="container">
+    <h2> Service Url Status</h2>
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">URL</th>
+            <th scope="col">Status</th>
+            <th scope="col">Created Date</th>
+            <th></th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody id="data">
+        </tbody>
+    </table>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 </body>
 <script src="static/code.js">
 </script>
